--- a/life.css
+++ b/life.css
@@ -8,15 +8,15 @@ body {
 }
 
 table {
-    background-color: #C5D6C6;
+    background-color: #ff0000;
     border-spacing: 1;
 }
 
 td {
-    border: 1px solid #F1F5DA;
+    border: 1px solid #ffffff;
     border-radius: 3px;
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
 }
 
 span {
