--- a/life.css
+++ b/life.css
@@ -15,8 +15,8 @@ table {
 td {
     border: 1px solid #ffffff;
     border-radius: 3px;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
 }
 
 span {
@@ -26,7 +26,7 @@ span {
 #start,
 #clear,
 #random {
-    padding: .75em;
+    padding: 1em;
     border-radius: 5px;
     border: none;    
     background: linear-gradient(
@@ -39,6 +39,6 @@ td.dead {
 }
 
 td.live {
-    background-color: #CC4774;
+    background-color: #353535;
     border-radius: 10px;
 }
