Playing with tone.js

--- a/life.css
+++ b/life.css
@@ -32,7 +32,7 @@ span {
     border: none;    
     background: linear-gradient(
         to bottom right,
-        #C5DEC6, #00ff08);
+        #C5DEC6, #e100ff);
 }
 
 
