Playing with tone.js

--- a/life.css
+++ b/life.css
@@ -32,7 +32,7 @@ span {
     border: none;    
     background: linear-gradient(
         to bottom right,
-        #C5DEC6, #190cc9);
+        #C5DEC6, #0c5ec9);
 }
 
 
