--- a/life.css
+++ b/life.css
@@ -32,7 +32,7 @@ span {
     border: none;    
     background: linear-gradient(
         to bottom right,
-        #C5DEC6, #66bb7c);
+        #C5DEC6, #bb7a66);
 }
 
 
