--- a/chatGPT/styles.css
+++ b/chatGPT/styles.css
@@ -1,3 +1,9 @@
+body {
+    padding: 20px;
+    background-color: rgb(0, 0, 0);
+}
+
+
 #grid {
     display: grid;
     grid-template-columns: repeat(10, 30px);
@@ -7,9 +13,9 @@
 .cell {
     width: 30px;
     height: 30px;
-    border: 1px solid #000;
+    border: 1px solid rgb(170, 4, 4);
 }
 
 .alive {
-    background-color: #000;
+    background-color: rgb(194, 11, 11);
 }
