--- a/video/styles.css
+++ b/video/styles.css
@@ -31,7 +31,7 @@ body {
 .cell {
     width: 30px;
     height: 30px;
-    border: 2px solid rgb(253, 86, 8);
+    border: 2px solid rgba(114, 8, 253, 0.486);
 }
 
 .alive {
